--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossOrigin: "anonymous",
       onInit: sdk => {
         sdk.appInsights.trackPageView()
-        location.replace(`https://1eslivesecrets.azurewebsites.net/nightly${location.search}`)
+        // location.replace(`https://1eslivesecrets.azurewebsites.net/nightly${location.search}`)
       },
       cfg: { instrumentationKey: ["af9f16b7", "dbc4", "41c4", "8c38", "c1f93f6a80b2"].join("-") }
       });
